initial android implementation